unpackaged/main/default/objects/Enquiry_Options__c/Enquiry_Options__c.object-meta.xml
<CustomObject>
    <label>Enquiry Options</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Enquiry Options Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Enquiry Options</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>