unpackaged/main/default/objects/Enquiry_Options__c/fields/Actual_Booking_Amount__c.field-meta.xml
<CustomField>
    <fullName>Actual_Booking_Amount__c</fullName>
    <label>Actual Booking Amount</label>
    <precision>11</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>