unpackaged/main/default/objects/Enquiry_Options__c/fields/Actual_Booking_Total__c.field-meta.xml
<CustomField>
    <fullName>Actual_Booking_Total__c</fullName>
    <formula>Net_Rate__c  *  Nights_in_House__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Actual Booking Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>