unpackaged/main/default/objects/Enquiry_Options__c/fields/Booking_Fee_Amount__c.field-meta.xml
<CustomField>
    <fullName>Booking_Fee_Amount__c</fullName>
    <formula>Total_Booking_Cost__c   *   Booking_Fee__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Booking Fee Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>