unpackaged/main/default/objects/Enquiry_Options__c/fields/Booking_Number__c.field-meta.xml
<CustomField>
    <fullName>Booking_Number__c</fullName>
    <label>Enquiry Number</label>
    <referenceTo>Enquiries_and_Bookings__c</referenceTo>
    <relationshipLabel>Enquiry Options</relationshipLabel>
    <relationshipName>Enquiry_Options</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>