unpackaged/main/default/objects/Enquiry_Options__c/fields/Booking_Revenue_This_Month__c.field-meta.xml
<CustomField>
    <fullName>Booking_Revenue_This_Month__c</fullName>
    <formula>((Total_Booking_Cost__c - Commission_Amount__c) / Number_of_Nights__c) *

IF(MIN((Check_Out_Date__c - Check_In_Date__c),
(Check_Out_Date__c - Current_Month_Start_Date__c),
(Current_Month_End_Date__c - Current_Month_Start_Date__c),
(Current_Month_End_Date__c - Check_In_Date__c)) &gt; 0,
MIN((Check_Out_Date__c - Check_In_Date__c),
(Check_Out_Date__c - Current_Month_Start_Date__c),
(Current_Month_End_Date__c - Current_Month_Start_Date__c),
(Current_Month_End_Date__c - Check_In_Date__c)),
0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Booking Revenue This Month</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>