unpackaged/main/default/objects/Enquiry_Options__c/fields/Bookings_Last_Month_Formula__c.field-meta.xml
<CustomField>
    <fullName>Bookings_Last_Month_Formula__c</fullName>
    <formula>IF(AND(ISPICKVAL(Option_Stage__c, &quot;Closed Booked&quot;),   Booking_Number__r.Date_of_Booking__c  &gt;=  First_Day_of_Last_Month__c ,  Booking_Number__r.Date_of_Booking__c &lt;=  Last_Day_of_Last_Month__c ), 1, NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Bookings Last Month Formula</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>