unpackaged/main/default/objects/Enquiry_Options__c/fields/Bookings_This_Year_Formula__c.field-meta.xml
<CustomField>
    <fullName>Bookings_This_Year_Formula__c</fullName>
    <formula>IF(AND(ISPICKVAL(Option_Stage__c, &quot;Closed Booked&quot;),   Booking_Number__r.Date_of_Booking__c  &gt;=   Current_Year__c  ,  Booking_Number__r.Date_of_Booking__c  &lt;=   Current_Year_End_Date__c  ), 1, NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Bookings This Year Formula</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>