unpackaged/main/default/objects/Enquiry_Options__c/fields/Check_In_Current_Month__c.field-meta.xml
<CustomField>
    <fullName>Check_In_Current_Month__c</fullName>
    <formula>IF(AND( Check_In_Date__c &lt; DATE(YEAR(TODAY()),MONTH(TODAY()),1),  Check_Out_Date__c &gt; DATE(YEAR(TODAY()),MONTH(TODAY()),1)), DATE(YEAR(TODAY()),MONTH(TODAY()),1), IF(Check_In_Date__c &gt;  Last_Day_of_Month__c , NULL, Check_In_Date__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Check In Current Month</label>
    <type>Date</type>
</CustomField>