unpackaged/main/default/objects/Enquiry_Options__c/fields/Check_In_Last_Month__c.field-meta.xml
<CustomField>
    <fullName>Check_In_Last_Month__c</fullName>
    <formula>IF(AND( Check_In_Date__c &lt;   First_Day_of_Last_Month__c  , Check_Out_Date__c &gt;  First_Day_of_Last_Month__c ),  First_Day_of_Last_Month__c , IF(Check_In_Date__c &gt;   Last_Day_of_Last_Month__c   , NULL, Check_In_Date__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Check In Last Month</label>
    <type>Date</type>
</CustomField>