unpackaged/main/default/objects/Enquiry_Options__c/fields/Check_In_Last_Year__c.field-meta.xml
<CustomField>
    <fullName>Check_In_Last_Year__c</fullName>
    <formula>IF(AND( Check_In_Date__c &lt;  Last_Year_Start_Date__c  , Check_Out_Date__c &gt;  Last_Year_Start_Date__c  ),  Last_Year_Start_Date__c  , IF(Check_In_Date__c &gt;  Last_Year_End_Date__c  , NULL, Check_In_Date__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Check In Last Year</label>
    <type>Date</type>
</CustomField>