unpackaged/main/default/objects/Enquiry_Options__c/fields/Check_Out_Current_Quarter_Last_Year__c.field-meta.xml
<CustomField>
    <fullName>Check_Out_Current_Quarter_Last_Year__c</fullName>
    <formula>IF(Check_In_Date__c &gt;  Current_Quarter_Last_Year_End_Date__c  , NULL, IF( Check_Out_Date__c &lt;  Current_Quarter_Last_Year_First_Date__c  , NULL, IF(Check_Out_Date__c &gt;  Current_Quarter_Last_Year_End_Date__c  ,  Current_Quarter_Last_Year_End_Date__c  + 1, Check_Out_Date__c)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Check Out Current Quarter Last Year</label>
    <type>Date</type>
</CustomField>