unpackaged/main/default/objects/Enquiry_Options__c/fields/Check_Out_Next_Month__c.field-meta.xml
<CustomField>
    <fullName>Check_Out_Next_Month__c</fullName>
    <formula>IF(Check_In_Date__c &gt;  Last_Day_of_Next_Month__c  , NULL, IF( Check_Out_Date__c &lt;  First_Day_of_Next_Month__c , NULL, IF(Check_Out_Date__c &gt;  Last_Day_of_Next_Month__c  ,  Last_Day_of_Next_Month__c  + 1, Check_Out_Date__c)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Check Out Next Month</label>
    <type>Date</type>
</CustomField>