unpackaged/main/default/objects/Enquiry_Options__c/fields/Client_Commission__c.field-meta.xml
<CustomField>
    <fullName>Client_Commission__c</fullName>
    <label>Client Commission %</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>