unpackaged/main/default/objects/Enquiry_Options__c/fields/Client_Commission_Amount__c.field-meta.xml
<CustomField>
    <fullName>Client_Commission_Amount__c</fullName>
    <formula>Total_Booking_Cost__c  *  Client_Commission__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Client Commission Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>