unpackaged/main/default/objects/Enquiry_Options__c/fields/Commission__c.field-meta.xml
<CustomField>
    <fullName>Commission__c</fullName>
    <label>Commission %</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>