unpackaged/main/default/objects/Enquiry_Options__c/fields/Current_Month_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Current_Month_End_Date__c</fullName>
    <formula>ADDMONTHS(DATE(YEAR(TODAY()),1,31),MONTH(TODAY()) -1 )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current Month End Date</label>
    <type>Date</type>
</CustomField>