unpackaged/main/default/objects/Enquiry_Options__c/fields/Current_Month_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Current_Month_Revenue__c</fullName>
    <formula>Net_Rate__c   *  Nights_in_Current_Month__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current Month Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>