unpackaged/main/default/objects/Enquiry_Options__c/fields/Current_Month_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Current_Month_Start_Date__c</fullName>
    <formula>DATE(YEAR(TODAY()),MONTH(TODAY()),1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current Month Start Date</label>
    <type>Date</type>
</CustomField>