unpackaged/main/default/objects/Enquiry_Options__c/fields/Current_Month_Supplier_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Current_Month_Supplier_Revenue__c</fullName>
    <formula>Current_Month_Revenue__c  -  Current_Month_Commission__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current Month Supplier Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>