unpackaged/main/default/objects/Enquiry_Options__c/fields/Current_Quarter_Last_Year_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Current_Quarter_Last_Year_End_Date__c</fullName>
    <formula>addMonths(  Last_Day_of_Next_Month__c  ,-12)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current Quarter Last Year End Date</label>
    <type>Date</type>
</CustomField>