unpackaged/main/default/objects/Enquiry_Options__c/fields/Current_Quarter_Last_Year_First_Date__c.field-meta.xml
<CustomField>
    <fullName>Current_Quarter_Last_Year_First_Date__c</fullName>
    <formula>addMonths( First_Day_of_Last_Month__c ,-12)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current Quarter Last Year First Date</label>
    <type>Date</type>
</CustomField>