unpackaged/main/default/objects/Enquiry_Options__c/fields/Current_Quarter_Last_Year_Supplier_Rev__c.field-meta.xml
<CustomField>
    <fullName>Current_Quarter_Last_Year_Supplier_Rev__c</fullName>
    <formula>Current_Quarter_Last_Year_Revenue__c  -  Current_Quarter_Last_Year_Commission__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current Quarter Last Year Supplier Rev</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>