unpackaged/main/default/objects/Enquiry_Options__c/fields/Current_Year_Commission__c.field-meta.xml
<CustomField>
    <fullName>Current_Year_Commission__c</fullName>
    <formula>Booking_Revenue_This_Year__c  *  Commission__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current Year Commission</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>