unpackaged/main/default/objects/Enquiry_Options__c/fields/Current_Year_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Current_Year_End_Date__c</fullName>
    <formula>DATE(YEAR(TODAY()),12,31)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current Year End Date</label>
    <type>Date</type>
</CustomField>