unpackaged/main/default/objects/Enquiry_Options__c/fields/Current_Year_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Current_Year_Revenue__c</fullName>
    <formula>Nights_in_Current_Year__c  *  Net_Rate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current Year Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>