unpackaged/main/default/objects/Enquiry_Options__c/fields/Current_Year_Supplier_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Current_Year_Supplier_Revenue__c</fullName>
    <formula>Current_Year_Revenue__c   -  Current_Year_Commission__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current Year Supplier Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>