unpackaged/main/default/objects/Enquiry_Options__c/fields/Date_of_Last_Note__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Last_Note__c</fullName>
    <label>Date of Last Note</label>
    <type>DateTime</type>
</CustomField>