unpackaged/main/default/objects/Enquiry_Options__c/fields/Enquiries_and_Bookings__c.field-meta.xml
<CustomField>
    <fullName>Enquiries_and_Bookings__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Enquiries and Bookings</label>
    <referenceTo>Enquiries_and_Bookings__c</referenceTo>
    <relationshipLabel>Enquiry Options (Enquiries and Bookings)</relationshipLabel>
    <relationshipName>Enquiry_Options1</relationshipName>
    <type>Lookup</type>
</CustomField>