unpackaged/main/default/objects/Enquiry_Options__c/fields/Enquiries_This_Month__c.field-meta.xml
<CustomField>
    <fullName>Enquiries_This_Month__c</fullName>
    <formula>IF(AND(  Booking_Number__r.Created_Date__c   &gt;= First_Day_of_Month__c , Booking_Number__r.Created_Date__c &lt;= Last_Day_of_Month__c ), 1, NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Enquiries This Month</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>