unpackaged/main/default/objects/Enquiry_Options__c/fields/Enquiries_This_Quarter_Last_Year__c.field-meta.xml
<CustomField>
    <fullName>Enquiries_This_Quarter_Last_Year__c</fullName>
    <label>Enquiries This Quarter Last Year</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>