unpackaged/main/default/objects/Enquiry_Options__c/fields/Enquiries_This_Quarter_Last_Year_Formula__c.field-meta.xml
<CustomField>
    <fullName>Enquiries_This_Quarter_Last_Year_Formula__c</fullName>
    <formula>IF(AND( Booking_Number__r.Created_Date__c &gt;=   Current_Quarter_Last_Year_First_Date__c   , Booking_Number__r.Created_Date__c &lt;=  Current_Quarter_Last_Year_End_Date__c  ), 1, NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Enquiries This Quarter Last Year Formula</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>