unpackaged/main/default/objects/Enquiry_Options__c/fields/Enquiry_Option_ID__c.field-meta.xml
<CustomField>
    <fullName>Enquiry_Option_ID__c</fullName>
    <externalId>true</externalId>
    <label>Enquiry Option ID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
    <unique>true</unique>
</CustomField>