unpackaged/main/default/objects/Enquiry_Options__c/fields/First_Day_of_Month__c.field-meta.xml
<CustomField>
    <fullName>First_Day_of_Month__c</fullName>
    <formula>DATE(YEAR(TODAY()),MONTH(TODAY()),1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>First Day of Month</label>
    <type>Date</type>
</CustomField>