unpackaged/main/default/objects/Enquiry_Options__c/fields/First_Day_of_Next_Month__c.field-meta.xml
<CustomField>
    <fullName>First_Day_of_Next_Month__c</fullName>
    <formula>Last_Day_of_Month__c + 1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>First Day of Next Month</label>
    <type>Date</type>
</CustomField>