unpackaged/main/default/objects/Enquiry_Options__c/fields/Flow_Update_2__c.field-meta.xml
<CustomField>
    <fullName>Flow_Update_2__c</fullName>
    <description>This field is used by a flow and is automatically updated once a week just so the record change trigger can be fired for a process</description>
    <label>Flow Update 2</label>
    <type>TextArea</type>
</CustomField>