unpackaged/main/default/objects/Enquiry_Options__c/fields/Last_Day_of_Last_Month__c.field-meta.xml
<CustomField>
    <fullName>Last_Day_of_Last_Month__c</fullName>
    <formula>addMonths( Last_Day_of_Month__c ,-1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Last Day of Last Month</label>
    <type>Date</type>
</CustomField>