unpackaged/main/default/objects/Enquiry_Options__c/fields/Last_Day_of_Month__c.field-meta.xml
<CustomField>
    <fullName>Last_Day_of_Month__c</fullName>
    <formula>ADDMONTHS(DATE(YEAR(TODAY()),1,31),MONTH(TODAY()) -1 )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Last Day of Month</label>
    <type>Date</type>
</CustomField>