unpackaged/main/default/objects/Enquiry_Options__c/fields/Last_Day_of_Next_Month__c.field-meta.xml
<CustomField>
    <fullName>Last_Day_of_Next_Month__c</fullName>
    <formula>DATE( Year(ADDMONTHS(TODAY(),2)),MONTH( ADDMONTHS(TODAY(),2)),1 ) -1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Last Day of Next Month</label>
    <type>Date</type>
</CustomField>